--- a/index.html
+++ b/index.html
@@ -1,28 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Winky+Rough&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>NILEENA S</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hi, I’m Nileena  — a third-year Computer Science Engineering student at Muthoot Institute of Technology and Science. I’m passionate about coding and building smart, user-friendly applications. I work with Python, C, Java, and React to bring ideas to life.</p>
-  </section>
+<header>
+  <h1>NILEENA S</h1>
 
-  <section id="projects">
-    <h2>My Projects</h2>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#education">Education</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <div class="social-icons">
+    <a href="mailto:nileenas123@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+    <a href="https://www.linkedin.com/in/nileena-s" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.instagram.com/nil.eennah/" target="_blank"><i class="fab fa-instagram"></i></a>
+  </div>
+</header>
+
+<!-- About Section -->
+<section id="about">
+  <h2>About Me</h2>
+  <div class="section-box">
+    <img src="myphoto.jpg" alt="My Photo" class="profile-photo">
+    <p>
+      Hi, I’m Nileena, a third-year Computer Science Engineering student at Muthoot Institute of Technology and Science. I love building things that work — and sometimes break them just to understand why.
+      <br><br>
+      I work with Python, C, Java, and React, and I enjoy the challenge of turning abstract ideas into functional, user-friendly software. Whether I’m debugging for hours or finally watching the code run perfectly, I’m always learning something new — and loving it.
+      <br><br>
+      When I’m not immersed in code, I’m probably imagining what the world would look like if apps could read minds (don’t worry, I’m not building one — yet).
+      <br><br>
+      Let’s connect — who knows, we might just build the next big thing.
+    </p>
+  </div>
+</section>
+
+<!-- Education Section -->
+<section id="education">
+  <h2>Education</h2>
+  <div class="section-box">
+    <div class="education-item">
+      <h3>Class 10th</h3>
+      <p>Navy Children School, Kochi</p>
+      <p>Year: 2020–2021</p>
+      <p>85.4%</p>
+    </div>
+
+    <div class="education-item">
+      <h3>Class 12th</h3>
+      <p>Navy Children School, Kochi</p>
+      <p>Year: 2022–2023</p>
+      <p>84.3%</p>
+    </div>
+
+    <div class="education-item">
+      <h3>Degree</h3>
+      <p>Muthoot Institute Of Technology and Science</p>
+      <p>Year: 2023–2027</p>
+      <p>Branch: Computer Science Engineering</p>
+      <p>CGPA: 8.40 / 10</p>
+    </div>
+  </div>
+</section>
+
+<!-- Projects Section -->
+<section id="projects">
+  <h2>My Projects</h2>
+  <div class="section-box">
     <div class="project">
       <h3>Project 1</h3>
       <p>Description of what this project does.</p>
@@ -31,16 +84,29 @@
       <h3>Project 2</h3>
       <p>Description of another project.</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: nileenas123@gmail.com</p>
-    <p>LinkedIn: linkedin.com/in/nileena-s/</p>
-  </section>
+<!-- Contact Section -->
+<section id="contact">
+  <h2>Contact Me</h2>
+  <form class="contact-form" action="mailto:nileenas123@gmail.com" method="post" enctype="text/plain">
+    <label for="name">Name</label>
+    <input type="text" id="name" placeholder="Your Name" required>
 
-  <footer>
-    <p>© 2025 Nileena</p>
-  </footer>
+    <label for="email">Email</label>
+    <input type="email" id="email" placeholder="Your Email" required>
+
+    <label for="message">Message</label>
+    <textarea id="message" placeholder="Your Message" required></textarea>
+
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+
+<footer>
+  <p>© 2025 Nileena</p>
+</footer>
+
 </body>
 </html>
