--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .success-message {
+      color: green;
+      background-color: #e8f5e9;
+      padding: 10px;
+      border-left: 5px solid green;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -90,31 +101,44 @@
 <!-- Contact Section -->
 <section id="contact">
   <h2>Contact Me</h2>
+
+  <!-- ✅ Success message placeholder -->
+  <div id="success" class="success-message">✅ Message sent successfully!</div>
+
   <form class="contact-form" action="https://formsubmit.co/nileenas123@gmail.com" method="POST">
-  <label for="name">Name</label>
-  <input type="text" name="name" id="name" required>
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" required>
 
-  <label for="email">Email</label>
-  <input type="email" name="email" id="email" required>
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" required>
 
-  <label for="message">Message</label>
-  <textarea name="message" id="message" required></textarea>
+    <label for="message">Message</label>
+    <textarea name="message" id="message" required></textarea>
 
-  <button type="submit">Send Message</button>
+    <button type="submit">Send Message</button>
 
-  <!-- Optional settings -->
-  <input type="hidden" name="_subject" value="New message from portfolio!">
-  <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_template" value="box">
-   <input type="hidden" name="_next" value="https://nileena-sajeev.github.io/my-portfolio/?message=success">
-</form>
-
-  
+    <!-- Hidden settings -->
+    <input type="hidden" name="_subject" value="New message from portfolio!">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_template" value="box">
+    <input type="hidden" name="_next" value="https://nileena-sajeev.github.io/my-portfolio/?message=success">
+  </form>
 </section>
 
 <footer>
   <p>© 2025 Nileena</p>
 </footer>
+
+<!-- ✅ JS to show message -->
+<script>
+  const urlParams = new URLSearchParams(window.location.search);
+  if (urlParams.get("message") === "success") {
+    const successDiv = document.getElementById("success");
+    if (successDiv) {
+      successDiv.style.display = "block";
+    }
+  }
+</script>
 
 </body>
 </html>
