--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
   <div class="section-box">
     <div class="project">
       <h3>Project 1</h3>
-      <p>Description of what this project does.</p>
+      <p>Soon!!!.</p>
     </div>
     <div class="project">
       <h3>Project 2</h3>
-      <p>Description of another project.</p>
+      <p>Soon!!!</p>
     </div>
   </div>
 </section>
