--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h3>Degree</h3>
       <p>Muthoot Institute Of Technology and Science</p>
       <p>Year: 2023–2027</p>
-      <p>Branch: Computer Science Engineering</p>
+      <p>Branch: Computer Science & Engineering</p>
       <p>CGPA: 8.40 / 10</p>
     </div>
   </div>
@@ -89,7 +89,7 @@
   <div class="section-box">
     <div class="project">
       <h3>Project 1</h3>
-      <p>Soon!!!.</p>
+      <p>Soon!!!</p>
     </div>
     <div class="project">
       <h3>Project 2</h3>
