--- a/index.html
+++ b/index.html
@@ -89,18 +89,21 @@
   </div>
 </section>
 
-<!-- Projects Section -->
 <section id="projects">
   <h2>My Projects</h2>
   <div class="section-box">
     <div class="project">
-      <h3>Project 1</h3>
-      <p>Soon!!!</p>
+      <h3>Project 1: 🎬 Movie Review Web App</h3>
+      <p>
+        A full-stack application where users can submit and view movie reviews. Built with React, Node.js, and MongoDB.
+      </p>
+      <a href="movie-review.html" class="project-link">View Details</a>
     </div>
-    <div class="project">
-      <h3>Project 2</h3>
-      <p>Soon!!!</p>
-    </div>
+  </div>
+</section>
+
+
+
   </div>
 </section>
 
