--- a/index.html
+++ b/index.html
@@ -43,21 +43,15 @@
   <h2>About Me</h2>
   <div class="section-box">
     <img src="myphoto.jpg" alt="My Photo" class="profile-photo">
-<p>
-    Hello! I’m Nileena, a passionate and curious third-year Computer Science Engineering student at Muthoot Institute of Technology and Science. I believe in learning by doing — whether it’s building functional applications, experimenting with code, or occasionally breaking things just to figure out how they work.
-  </p>
-  <p>
-    My technical foundation is rooted in languages like Python, C, and Java, and I’ve recently been diving into front-end and full-stack development using React. I enjoy bridging the gap between logic and creativity — transforming abstract concepts into clean, efficient, and user-friendly digital experiences.
-  </p>
-  <p>
-    What excites me most about technology is its power to solve real-world problems. I thrive in environments where I can learn continuously, collaborate with others, and push the boundaries of what I already know. From the thrill of fixing a stubborn bug at 2 AM to the joy of watching an idea come to life in a browser — coding, for me, is a mix of puzzle-solving and storytelling.
-  </p>
-  <p>
-    Outside of tech, I love imagining the future — sometimes wondering what the world would look like if apps could read minds (don’t worry, I’m not building one… yet). I’m also a strong believer in the power of good coffee, good UI, and good conversations.
-  </p>
-  <p>
-    Let’s connect — whether it’s to collaborate, brainstorm, or just share ideas. Who knows? We might just create something impactful together.
-  </p>
+    <p>
+      Hi, I’m Nileena, a third-year Computer Science Engineering student at Muthoot Institute of Technology and Science. I love building things that work — and sometimes break them just to understand why.
+      <br><br>
+      I work with Python, C, Java, and React, and I enjoy the challenge of turning abstract ideas into functional, user-friendly software. Whether I’m debugging for hours or finally watching the code run perfectly, I’m always learning something new — and loving it.
+      <br><br>
+      When I’m not immersed in code, I’m probably imagining what the world would look like if apps could read minds (don’t worry, I’m not building one — yet).
+      <br><br>
+      Let’s connect — who knows, we might just build the next big thing.
+    </p>
   </div>
 </section>
 
@@ -89,21 +83,18 @@
   </div>
 </section>
 
+<!-- Projects Section -->
 <section id="projects">
   <h2>My Projects</h2>
   <div class="section-box">
     <div class="project">
-      <h3>Project 1: 🎬 Movie Review Web App</h3>
-      <p>
-        A full-stack application where users can submit and view movie reviews. Built with React, Node.js, and MongoDB.
-      </p>
-      <a href="movie-review.html" class="project-link">View Details</a>
+      <h3>Project 1</h3>
+      <p>Soon!!!</p>
     </div>
-  </div>
-</section>
-
-
-
+    <div class="project">
+      <h3>Project 2</h3>
+      <p>Soon!!!</p>
+    </div>
   </div>
 </section>
 
