--- a/movie-review.html
+++ b/movie-review.html
@@ -26,7 +26,7 @@
   <p>📌 <strong>Features:</strong> RESTful API, CORS integration, review handling</p>
 
   <h2>Team Members</h2>
-  <p>Jumana, Malavika Saji, Nidhi Merin George, Nileena S, Krishna K R, Sahala Sajad</p>
+  <p>Jumana, Malavika Saji, Nidhi Merin George, Sahala Sajad, Krishna K R</p>
 
   <h2>Screenshots</h2>
   <img src="movie.jpg" alt="Movie App Screenshot 1" style="width:100%; max-width:600px;"/>
