--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <h2>My Projects</h2>
   <div class="section-box">
     <div class="project">
-      <h3>🎬 Project 1: Movie Review Web App</h3>
+      <h3>Project 1:🎬Movie Review Web App</h3>
       <p>
         A full-stack web application where users can submit and view movie reviews in real-time.
         Built with React, Node.js, Express, and MongoDB.
