--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <a href="#education">Education</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
+    <a href="#certifications">Certifications</a>
   </nav>
 
   <div class="social-icons">
@@ -98,7 +99,26 @@
     </div>
   </div>
 </section>
+<section id="certifications">
+  <h2>Certifications</h2>
+  <div class="section-box">
+    <h3>Cambridge Linguaskill Business – English Proficiency</h3>
+    <p><strong>Issued by:</strong> Cambridge English | <strong>Institution:</strong> Muthoot Institute of Technology & Science</p>
+    <p><strong>Date:</strong> 09 May 2024</p>
+    <p><strong>Overall CEFR Level:</strong> <span style="color: #b07897;"><strong>B2</strong></span> (Average Score: 173)</p>
 
+    <p>
+      <strong>Listening:</strong> 172 – B2<br>
+      <strong>Reading:</strong> 180+ – C1 or above<br>
+      <strong>Speaking:</strong> 170 – B2<br>
+      <strong>Writing:</strong> 167 – B2
+    </p>
+
+    <p>
+      This certification demonstrates my ability to communicate in English in professional and academic contexts, with strong comprehension, speaking, and writing skills. The assessment is based on the Common European Framework of Reference for Languages (CEFR).
+    </p>
+  </div>
+</section>
 
 <!-- Contact Section -->
 <!-- Contact Section -->
